--- a/exercises/events/example.html
+++ b/exercises/events/example.html
@@ -5,6 +5,15 @@
   <h1>Click the button</h1>
   <button>Me!</button>
   <script>
-    
+  $('button').on('click', () => {
+    alert('Hello!')
+  });
+  $('button').on('click', () => {
+    alert('There!')
+  });
+
+  $('button').trigger('click');
+
+  $('button').off('click');
   </script>
 </body>
